added required attribute to input box

--- a/calculator.html
+++ b/calculator.html
@@ -26,9 +26,9 @@
   </head>
   <body>
     <label>First No:</label>
-    <input type="text" name="first-no" id="first-no" placeholder="Enter number" onkeydown = "return NumberOnly(event.keyCode);" /></br>
+    <input type="text" name="first-no" id="first-no" placeholder="Enter number" onkeydown = "return NumberOnly(event.keyCode);" required/></br>
     <label>Second No:</label>
-    <input type="text" name="second-no" id="second-no" placeholder="Enter number" onkeydown = "return NumberOnly(event.keyCode);"/></br>
+    <input type="text" name="second-no" id="second-no" placeholder="Enter number" onkeydown = "return NumberOnly(event.keyCode);" required/></br>
     <input id="sum" type="button" value="+" onclick='cal(this)' />
     <input id="sub" type="button" value="-" onclick='cal(this)' />
     <input id="mul" type="button" value="*" onclick='cal(this)' />
