--- a/tableoperations.html
+++ b/tableoperations.html
@@ -28,6 +28,16 @@
           }
         } 
       }  
+    function AddRowToTable() {
+      var table = document.getElementById("myTable");
+      var rowLength = table.rows.length;
+      var row = table.insertRow(0);
+      alert(row);
+      var cell1 = row.insertCell(0);
+      var cell2 = row.insertCell(1);
+      cell1.innerHTML = "CELL- X";
+      cell2.innerHTML = "CELL- Y";
+    }
     </script>
   </head>
   <body>
@@ -49,6 +59,6 @@
       	<td>Cell6</td>
       </tr>
     </table>
-    <input type="button" id="addRowToTable" value="Add Row !" onclick="return GetTabaleDetails()" />
+    <input type="button" id="addRowToTable" value="Add Row !" onclick="return AddRowToTable()"/>
   </body>
 </html>
