--- a/userlogin.html
+++ b/userlogin.html
@@ -7,7 +7,7 @@
     <fieldset>
       <legend>Please Login Here</legend>
       <form name="loginForm" id="LoginForm" onsubmit="return verify()" >      
-        <label>Login Name</label><input type="text" name="loginName" id="LoginName" onchange="return createCookie('ppkcookie','testcookie',7)"/>
+        <label>Login Name</label><input type="text" name="loginName" id="LoginName" />
         <label>E-mail Address</label><input type="text" name="emailId" id="EmailID" autocomplete='off' onchange="return checkmail()" />
         <label>Password</label><input type="password" name="loginPass" id="LoginPass" />
         <label>Confirm Password</label><input type="password" name="confirmloginPass" id="ConfirmLoginPass" />
