--- a/userdetails.html
+++ b/userdetails.html
@@ -7,5 +7,6 @@
 <body>
 welcome !
 <input type="button" name="" value="ClickMe" onclick="return person.fullName()">
+<input type="button" name="logout" value="Logout" />
 </body>
 </html>
