--- a/userlogin.html
+++ b/userlogin.html
@@ -6,7 +6,7 @@
   <body>
     <fieldset>
       <legend>Please Login Here</legend>
-      <form name="loginForm" id="LoginForm" onsubmit="return verify()" >      
+      <form name="loginForm" id="LoginForm" onsubmit="return verify()" METHOD="LINK" ACTION="userdetails.html" >      
         <label>Login Name</label><input type="text" name="loginName" id="LoginName" />
         <label>E-mail Address</label><input type="text" name="emailId" id="EmailID" autocomplete='off' onchange="return checkmail()" />
         <label>Password</label><input type="password" name="loginPass" id="LoginPass" />
