--- a/userlogin.html
+++ b/userlogin.html
@@ -4,6 +4,7 @@
     <script src="login.js"></script> 
   </head>
   <body>
+    <div id="result"></div>
     <fieldset>
       <legend>Please Login Here</legend>
       <form name="loginForm" id="LoginForm" onsubmit="return verify()" METHOD="LINK" ACTION="userdetails.html" >      
