--- a/signuptologin/signup.html
+++ b/signuptologin/signup.html
@@ -5,11 +5,12 @@
 	<script src="processlogin.js"></script> 
 </head>
 <body>
-	<form class="signup" action="process.php" method="post">
- 		<label>Username</label><input type="text" class="username" name="username" placeholder="Enter Your Username" />
- 		<label>Email</label><input type="email" class="email" name="email" placeholder="Enter Your Email id" />
- 		<label>Password</label><input type="password" name="pass" placeholder="Enter Your password" />
+	<form class="signup" method="post">
+ 		<label>Username</label><input type="text" id="user" class="username" name="username" placeholder="Enter Your Username" />
+ 		<label>Email</label><input type="email" id="user-email" class="email" name="email" placeholder="Enter Your Email id" />
+ 		<label>Password</label><input type="password" id="user-pass" name="pass" placeholder="Enter Your password" />
  		<input type="submit" class="signupsubmit" value="SignUp" id="signup" onclick="return signup()" />
  	</form>
+ 	<span id="txtHint"></span>
 </body>
 </html>
