Modified html js and php files as variables passed through js file are not accpted into php file due to wrong variable passed to php. It should use variables passed through js.

--- a/signuptologin/signup.html
+++ b/signuptologin/signup.html
@@ -9,8 +9,7 @@
  		<label>Username</label><input type="text" id="user" class="username" name="username" placeholder="Enter Your Username" />
  		<label>Email</label><input type="email" id="user-email" class="email" name="email" placeholder="Enter Your Email id" />
  		<label>Password</label><input type="password" id="user-pass" name="pass" placeholder="Enter Your password" />
- 		<input type="submit" class="signupsubmit" value="SignUp" id="signup" onclick="return signup()" />
- 	</form>
- 	<span id="txtHint"></span>
+ 		<input type="submit" class="signupsubmit" value="SignUp" id="signup" onclick="ajax_post()" />
+  </form>
 </body>
 </html>
